Fixed spacing and color of borders in navbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -91,6 +91,7 @@ th:hover {
 	li {
 		margin-right: 0 !important;
 		padding: 10px;
-		border: solid #292b2c 1px;
+		border: solid #c4c4c4 1px;
+		margin-top: 3px;
 	}
 }
